--- a/manual.bib
+++ b/manual.bib
@@ -599,4 +599,141 @@ Charge carrier dynamics in an organic semiconductor can often be described in te
 	author = {R\"{u}hle, Victor and Lukyanov, Alexander and May, Falk and Schrader, Manuel and Vehoff, Thorsten and Kirkpatrick, James and Baumeier, Bj\"{o}rn and Andrienko, Denis},
 	year = {2011},
 	pages = {3335--3345}
-}
+},
+
+@article{stone_distributed_1985,
+	title = {Distributed multipole analysis},
+	volume = {56},
+	issn = {0026-8976, 1362-3028},
+	url = {http://www.tandfonline.com/doi/abs/10.1080/00268978500102891},
+	doi = {10.1080/00268978500102891},
+	number = {5},
+	urldate = {2013-03-14},
+	journal = {Molecular Physics},
+	author = {Stone, {A.J.} and Alderton, M.},
+	month = dec,
+	year = {1985},
+	pages = {1047--1064}
+},
+
+@article{van_duijnen_molecular_1998,
+	title = {Molecular and Atomic Polarizabilities:~ Thole's Model Revisited},
+	volume = {102},
+	issn = {1089-5639, 1520-5215},
+	shorttitle = {Molecular and Atomic Polarizabilities},
+	url = {http://pubs.acs.org/doi/abs/10.1021/jp980221f},
+	doi = {10.1021/jp980221f},
+	number = {14},
+	urldate = {2013-01-02},
+	journal = {The Journal of Physical Chemistry A},
+	author = {van Duijnen, Piet Th. and Swart, Marcel},
+	month = apr,
+	year = {1998},
+	pages = {2399--2407}
+},
+
+@article{applequist_atom_1972,
+	title = {Atom dipole interaction model for molecular polarizability. Application to polyatomic molecules and determination of atom polarizabilities},
+	volume = {94},
+	issn = {0002-7863},
+	url = {http://pubs.acs.org/doi/abs/10.1021/ja00764a010},
+	doi = {10.1021/ja00764a010},
+	number = {9},
+	urldate = {2013-03-18},
+	journal = {Journal of the American Chemical Society},
+	author = {Applequist, Jon and Carl, James R. and Fung, Kwok-Kueng},
+	month = may,
+	year = {1972},
+	pages = {2952--2960}
+},
+
+@article{ren_polarizable_2003,
+	title = {Polarizable Atomic Multipole Water Model for Molecular Mechanics Simulation},
+	volume = {107},
+	issn = {1520-6106},
+	url = {http://dx.doi.org/10.1021/jp027815+},
+	doi = {10.1021/jp027815+},
+	abstract = {A new classical empirical potential is proposed for water. The model uses a polarizable atomic multipole description of electrostatic interactions. Multipoles through the quadrupole are assigned to each atomic center based on a distributed multipole analysis ({DMA)} derived from large basis set molecular orbital calculations on the water monomer. Polarization is treated via self-consistent induced atomic dipoles. A modified version of Thole's interaction model is used to damp induction at short range. Repulsion?dispersion ({vdW)} effects are computed from a buffered 14?7 potential. In a departure from most current water potentials, we find that significant {vdW} parameters are necessary on hydrogen as well as oxygen. The new potential is fully flexible and has been tested versus a variety of experimental data and quantum calculations for small clusters, liquid water, and ice. Overall, excellent agreement with experimental and high level ab initio results is obtained for numerous properties, including cluster structures and energetics and bulk thermodynamic and structural measures. The parametrization scheme described here is easily extended to other molecular systems, and the resulting water potential should provide a useful explicit solvent model for organic solutes and biopolymer modeling.},
+	number = {24},
+	urldate = {2013-01-02},
+	journal = {The Journal of Physical Chemistry B},
+	author = {Ren, Pengyu and Ponder, Jay W.},
+	month = jun,
+	year = {2003},
+	pages = {5933--5947},
+	file = {ACS Full Text Snapshot:/people/thnfs/homes/poelking/.mozilla/firefox/e0b7rg1e.default/zotero/storage/74U6ZV3Q/jp027815+.html:text/html}
+},
+
+@book{stone_theory_1997,
+	address = {Oxford},
+	title = {The Theory of intermolecular forces},
+	isbn = {{019855883X}  9780198558835},
+	language = {English},
+	publisher = {Clarendon Press},
+	author = {Stone, A. J},
+	year = {1997}
+},
+
+@article{verstraelen_assessment_2012,
+	title = {Assessment of Atomic Charge Models for Gas-Phase Computations on Polypeptides},
+	volume = {8},
+	issn = {1549-9618, 1549-9626},
+	url = {http://pubs.acs.org/doi/abs/10.1021/ct200512e},
+	doi = {10.1021/ct200512e},
+	number = {2},
+	urldate = {2013-03-14},
+	journal = {Journal of Chemical Theory and Computation},
+	author = {Verstraelen, Toon and Pauwels, Ewald and De Proft, Frank and Van Speybroeck, Veronique and Geerlings, Paul and Waroquier, Michel},
+	month = feb,
+	year = {2012},
+	pages = {661--676}
+},
+
+@article{breneman_determining_1990,
+	title = {Determining atom-centered monopoles from molecular electrostatic potentials. The need for high sampling density in formamide conformational analysis},
+	volume = {11},
+	copyright = {Copyright {\textcopyright} 1990 John Wiley \& Sons, Inc.},
+	issn = {1096-{987X}},
+	url = {http://onlinelibrary.wiley.com/doi/10.1002/jcc.540110311/abstract},
+	doi = {10.1002/jcc.540110311},
+	abstract = {An improved method for computing potential-derived charges is described which is based upon the {CHELP} program available from {QCPE.1} This approach ({CHELPG)} is shown to be considerably less dependent upon molecular orientation than the original {CHELP} program. In the second part of this work, the {CHELPG} point selection algorithm was used to analyze the changes in the potential-derived charges in formamide during rotation about the {C?N} bond. In order to achieve a level of rotational invariance less than 10\% of the magnitude of the electronic effects studied, an equally-spaced array of points 0.3 {\r A} apart was required. Points found to be greater than 2.8 {\r A} from any nucleus were eliminated, along with all points contained within the defined {VDW} distances from each of the atoms. The results are compared to those obtained by using {CHELP.} Even when large numbers of points (ca. 3000) were sampled using the {CHELP} selection routine, the results did not indicate a satisfactory level of rotatational invariance. On the basis of these results, the original {CHELP} program was found to be inadequate for analyzing internal rotations.},
+	language = {en},
+	number = {3},
+	urldate = {2012-12-17},
+	journal = {Journal of Computational Chemistry},
+	author = {Breneman, Curt M. and Wiberg, Kenneth B.},
+	year = {1990},
+	pages = {361{\textendash}373},
+	file = {Snapshot:/people/thnfs/homes/poelking/.mozilla/firefox/e0b7rg1e.default/zotero/storage/BQZ5ITAV/abstract.html:text/html}
+},
+
+@article{chirlian_atomic_1987,
+	title = {Atomic charges derived from electrostatic potentials: A detailed study},
+	volume = {8},
+	issn = {0192-8651, 1096-{987X}},
+	shorttitle = {Atomic charges derived from electrostatic potentials},
+	url = {http://doi.wiley.com/10.1002/jcc.540080616},
+	doi = {10.1002/jcc.540080616},
+	number = {6},
+	urldate = {2013-03-14},
+	journal = {Journal of Computational Chemistry},
+	author = {Chirlian, Lisa Emily and Francl, Michelle Miller},
+	month = sep,
+	year = {1987},
+	pages = {894--905}
+},
+
+@article{singh_approach_1984,
+	title = {An approach to computing electrostatic charges for molecules},
+	volume = {5},
+	issn = {0192-8651, 1096-{987X}},
+	url = {http://doi.wiley.com/10.1002/jcc.540050204},
+	doi = {10.1002/jcc.540050204},
+	number = {2},
+	urldate = {2013-01-02},
+	journal = {Journal of Computational Chemistry},
+	author = {Singh, U. Chandra and Kollman, Peter A.},
+	month = apr,
+	year = {1984},
+	pages = {129--145}
+},
