--- a/newcommands.tex
+++ b/newcommands.tex
@@ -77,3 +77,11 @@
 \renewcommand*{\showkeyslabelformat}[1]{{\normalfont\tiny\sffamily#1}}
 \definecolor{refkey}{rgb}{1,0,0}
 \definecolor{labelkey}{rgb}{1,0,0}
+
+% Calculus and Linear Algbra Notation
+% formulas
+\newcommand{\vctr}[1]{\mathbf{ \bar{#1} }}
+\newcommand{\oper}[1]{\hat{ #1 }}
+\newcommand{\matr}[1]{\mathbf{ #1 }}
+
+
