--- a/reference/reference.tex
+++ b/reference/reference.tex
@@ -1,17 +1,16 @@
-\chapter{Manual pages}
-%
-% if you want to refer to any of the tags specified here use the following command
-% \segmentopt{crgunit_type.ChargeUnitType.posname}
-%
+\chapter{Reference}
+
 \section{Programs}
 \label{ref:programs}
+Programs execute specific tasks (calculators). 
+
 \input{reference/programs/all}
 
 \section{Calculators}
 \label{ref:calculators}
 \label{sec:calculators}
 
-Calculator is a piece of code which computes specific system properties, such as site energies, transfer integrals, etc. \ctprun is a wrapper program which executes all calculators. The generic syntax is 
+Calculator is a piece of code which computes specific system properties, such as site energies, transfer integrals, etc. \ctprun, \kmcrun are wrapper programs which executes such calculators. The generic syntax is 
 \vskip 0.2cm
 {\noindent \small \ctprun \exe \texttt{"calc1, calc2, ..."} \opt \xmloptions }
 \vskip 0.2cm
