--- a/manual.tex
+++ b/manual.tex
@@ -111,7 +111,7 @@ pdfpagemode=UseNone]{hyperref}
 \input{theory/nondispersive}
 \input{theory/analysis}
 \input{theory/correlations}
-\input{theory/idft}
+%\input{theory/idft}
 
 \chapter{Input and output files}
 \label{sec:io}
