--- a/newcommands.tex
+++ b/newcommands.tex
@@ -10,11 +10,12 @@
 
 
 \newcommand{\xml}{XML\xspace}
-\newcommand{\gromacs}{GROMACS\xspace}
-\newcommand{\gaussian}{GAUSSIAN\xspace}
-\newcommand{\turbomole}{TURBOMOLE\xspace}
-\newcommand{\tinker}{TINKER\xspace}
-\newcommand{\dipro}{DIPRO\xspace}
+\newcommand{\gromacs}{\texttt{GROMACS}\xspace}
+\newcommand{\gaussian}{\texttt{Gaussian}\xspace}
+\newcommand{\turbomole}{\texttt{Turbomole}\xspace}
+\newcommand{\nwchem}{\texttt{NWChem}\xspace}
+\newcommand{\tinker}{\texttt{TINKER}\xspace}
+\newcommand{\dipro}{\texttt{DIPRO}\xspace}
 
 \newcommand{\Alq}{$\mathrm{Alq}_3$\xspace}
 \newcommand{\dcvt}{DCV2T\xspace}
