--- a/theory/dft.tex
+++ b/theory/dft.tex
@@ -1,80 +1,54 @@
-\subsection{Density-functional methods}
+\subsection{Density-functional theory based coupling elements using DIPRO}
 \label{sec:dft}
 \index{electronic coupling!DFT}
 % While the use of the semiempirical ZINDO method provides an efficient on-the-fly technique to determine electronic coupling elements, it is not generally applicable to all systems. For instance, its predictive capacity with regards to atomic composition and localization behavior of orbitals within more complex structures is reduced. Moreover, transition- or semi-metals are often not even parametrized. In this case, {\it ab-initio} based approaches, e.g., density-functional theory can remedy the situation~\cite{huang_intermolecular_2004,huang_validation_2005,valeev_effect_2006,yin_balanced_2006,yang_theoretical_2007,baumeier_density-functional_2010}. 
 
-Within the dimer projection method~\cite{valeev_effect_2006,baumeier_density-functional_2010}, explicit quantum-chemical calculations are required for every molecule and every hopping pair in the morphology. As a consequence, this procedure is significantly more computationally demanding. The code currently contains scripts which support evaluation of transfer integrals from quantum-chemical calculations performed with the \gaussian and \turbomole packages. The interfacing procedure consists of three main steps: generation of directory structures containing input coordinates for monomers and dimers, performing the actual quantum-chemical calculations and calculating the transfer integrals, and finally reading the output into the state file.
+The calculation of one electronic coupling element based on DFT using the \dipro method requires the overlap matrix of atomic orbitals $\matr{\mathcal{S}}$, the expansion coefficients for monomer $\vctr{\boldsymbol{\lambda}}_{(k)} = \{ \lambda_\alpha^{(k)}\}$ and dimer orbitals $\vctr{D}_{(n)} = \{ D^{(n)}_{\alpha} \}$, as well as the orbital energies $E_{n}$ of the dimer are required as input. In practical situations, performing self-consistent quantum-chemical calculations for each individual monomer and one for the dimer to obtain this input data is extremely demanding. Several simplifications can be made to reduce the computational effort, such as using non-Counterpoise basis sets for the monomers (thereby decoupling the monomer calculations from the dimer run) and performing only a single SCF step in a dimer calculation starting from an initial guess formed from a superposition of monomer orbitals. This ''noCP+noSCF'' variant of \dipro is recommended for production runs. A detailed comparative study of the different variants can be found in~\cite{baumeier_density-functional_2010}.
 
-\subsubsection{Directory structure and input coordinates}
-First, \slink{segments}{hopping sites} and a \slink{neighborlist}{neighbor list} need to be generated from the atomistic topology and trajectory and written to the \sqlstate file. The directory structure, and coordinate files of monomers and dimers are then generated using the \calc{pairdump} \calculator
-\label{sec:pairdump}
+The code currently contains supports evaluation of transfer integrals from quantum-chemical calculations performed with the \gaussian, \turbomole, and \nwchem packages. The interfacing procedure consists of three main steps: generation of input files for monomers and dimers, performing the actual quantum-chemical calculations, and calculating the transfer integrals. 
+
+\subsubsection{Monomer calculations}
+First, \slink{segments}{hopping sites} and a \slink{neighborlist}{neighbor list} need to be generated from the atomistic topology and trajectory and written to the \sqlstate file. Then the parallel \calc{edft} \calculator 
+\label{sec:edft}
 \vskip 0.1cm
-{\noindent \small \ctprun \opt \xmloptions \sqlstate \exe \calc{pairdump} }
+{\small \ctpparallel \opt \xmloptions \sql \sqlstate \exe \calc{edft} }
 \vskip 0.1cm
-\calc{pairdump} creates the following directories and files:
+\noindent goes through the list of molecules specified in the job list and for each 
+\begin{enumerate}
+ \item creates the input files for the DFT calculation (using the package specified in \xmloptions) in the directory 
 \begin{verbatim}
-frameF/mol_M/mol_M.xyz
-frameF/pair_K_L/dim/pair_K_L.xyz
+OR_FILES/package/frame_F/mol_M
 \end{verbatim}
-where $F$ is the index of the snapshot in the trajectory, $M$ is the index of a molecule in this snapshot, $K$ and $L$ are the indeces of molecules in the \slink{neighborlist}{neighbor list}.  
+where {\tt F} is the index of the frame in the trajectory, {\tt M} is the index of a molecule in this frame,
+\item executes the package, and
+\item after completion of this run, parses the output (number of electrons, basis set, molecular orbital expansion coefficients), and saves it in compressed form to 
+\begin{verbatim}
+ OR_FILES/molecules/frame_F/molecule_M.orb 
+\end{verbatim}
+\end{enumerate}
+
 
 \subsubsection{Calculating the transfer integrals}
-Before starting the quantum-chemical calculations with either \gaussian or \turbomole, make sure that the respective environments for these programs are set. 
-
-First, for each molecule a converged electronic structure calculatiom has to be performed by running 
+After the momomer calculations have been completed successfully, the respective runs for dimers from the neighborlist can be performed using the parallel \calc{idft} \calculator
+\label{sec:edft}
+\vskip 0.1cm
+{\small \ctpparallel \opt \xmloptions \sql \sqlstate \exe \calc{idft} }
+\vskip 0.1cm
+Again, this \calc goes through the list of pairs specified in the respective job list and for each 
+\begin{enumerate}
+ \item creates the input files (including the merged guess for a noSCF calculation, if requested) for the DFT calculation in the directory 
 \begin{verbatim}
-ctp_dipro --monomer QCP [METHOD]
-
-QCP:   G for Gaussian09
-       T for Turbomole
-
-METHOD: func/basis (optional)
-        overrides default functional/basisset combination
-        defaults: pbepbe/6-311G** Gaussian09
-                  pbe/def-TZVP    Turbomole
+OR_FILES/package/frame_F/pair_M_N
 \end{verbatim}
-in each {\tt mol\_*} directory. If no method is specified, {\tt ctp\_dipro} defaults to running a DFT calculation with the PBE functional and a 6-311G** basis set in \gaussian and def-TZVP in \turbomole. Note that {\tt OpenBabel} needs to be installed if \turbomole is used. It is recommended to perform these calculations in batch mode on some kind of cluster system. Since it can eventually happen that files are not written back correctly, one should check if all files that are needed for the pair runs are present by executing in the {\tt frame*} directory
+where {\tt M} and {\tt N} are the indices of the molecules in this pair,
+\item executes the package, and
+\item after completion of this run, parses the output (number of electrons, basis set, molecular orbital expansion coefficients and energies, atomic orbital overlap matrix ),
+\item loads the monomer orbitals from the previously saved {\tt *.orb files}.
+\item calculates the coupling elements and saves it to the \sqlstate, and the pair information in compressed form to 
 \begin{verbatim}
-ctp_dipro --check N M QCP
-
-N:   First monomer to test
-M:   Last monomer to test
-QCP: G/T 
+ OR_FILES/pairs/frame_F/pair_M_N.orb 
 \end{verbatim}
-A list of incomplete monomer calculations is written to file {\tt TROUBLE.mol}. If this is empty, one can proceed with running the pair calculations. For any directory {\tt pair\_A\_B}, the completed monomer calculations from the previous step have to be present in subdirectories {\tt mol\_A} and {\tt mol\_B}, e.g.
-\begin{verbatim}
-pair_A_B/
-         molA/
-         molB/
-         dim/pair_A_B.xyz
-...
-\end{verbatim}
-These subdirectories can be either copies or symbolic links, however, the most practical realization depends on the specifics of execute machine and are not created automatically! Once these are created by the user, the transfer integral for the pair can be calculated by running {\tt ctp\_dipro { -}-dimer} in the {\tt pair\_A\_B/dim} directory:
- \begin{verbatim}
-ctp_dipro --dimer QCP [METHOD]
+\end{enumerate}
 
-QCP:   G for Gaussian09
-       T for Turbomole
 
-METHOD: func/basis (optional)
-        overrides default functional/basisset combination
-        defaults: pbepbe/6-311G** Gaussian09
-                  pbe/def-TZVP    Turbomole
-\end{verbatim}
-This command automatically generates a dimer input guess from the converged monomer orbitals, detects (pseudo-)degeneracies of HOMO or LUMO and calculates the required transfer integrals. 
 
-As a result of the run, a file {\tt pair\_A\_B/TI.xml} is created. 
-
-\subsubsection{Writing transfer integrals to state file}
-After performing all transfer integral calculations, the resulting output files {\tt pair\_A\_B/TI.xml} have to be collected in the folder {\tt transfer\_integrals} as {\tt transfer\_integrals/pair\_A\_B.xml}. Then the transfer integrals are written into the state file using:
-\begin{verbatim}
-ctp_dipro --write TYPE ID FILE
-
-TYPE:   e    - electrons
-        h    - holes
-        edeg - (pseudo-)degenerate electrons (Boltzmann-weighted)
-        hdeg - (pseudo-)degenerate holes (Boltzmann-weighted)
-ID:     Number of frame
-FILE:   Name of state file 
-\end{verbatim}
-During the run, some sanity checks are performed, i.e., whether all transfer integrals are calculated, and whether a pair that is written exists in the state file. If there is an error, the tool aborts.
