small changes in the text

--- a/manual.tex
+++ b/manual.tex
@@ -125,8 +125,8 @@ pdfpagemode=UseNone]{hyperref}
 
 \input{reference/reference}
 
-\appendix
-\input{appendix/moo_standalone}
+%\appendix
+%\input{appendix/moo_standalone}
 
 \nolinenumbers
 
