--- a/newcommands.tex
+++ b/newcommands.tex
@@ -6,7 +6,7 @@
 \newcommand{\Fig}[1]{Figure~\ref{fig:#1}}
 \newcommand{\sect}[1]{section~\ref{sec:#1}}
 
-\newcommand{\slink}[2]{\hyperref[sec:#1]{#2}}
+\newcommand{\slink}[2]{\hyperref[#1]{#2}}
 
 
 \newcommand{\xml}{XML\xspace}
@@ -40,6 +40,10 @@
 \newcommand{\tpl}{\texttt{{ -}t}\xspace}
 \newcommand{\csg}{\texttt{{ -}m}\xspace}
 \newcommand{\trj}{\texttt{{ -}c}\xspace}
+\newcommand{\job}{\texttt{{ -}j}\xspace}
+\newcommand{\run}{\texttt{{run}}\xspace}
+\newcommand{\wrt}{\texttt{{write}}\xspace}
+\newcommand{\rd}{\texttt{{read}}\xspace}
 
 
 \newcommand{\refcalc}{\hyperref[ref:calculators]{calculators}\xspace}
