--- a/manual.tex
+++ b/manual.tex
@@ -31,6 +31,8 @@
 % \usepackage[framemethod=tikz]{mdframed}
 \usepackage{lipsum}
 
+\newcommand\votcalogo{\includegraphics[width=17pt]{fig/logo_trans}}
+
 \definecolor{bgblue}{RGB}{245,243,253}
 \definecolor{ttblue}{RGB}{91,194,224}
 % \renewcommand\bcStyleTitre[1]{\large\textcolor{ttblue}{#1}}
