Pascal's workflow as native LaTeX, links are clickable

--- a/manual.tex
+++ b/manual.tex
@@ -33,6 +33,14 @@
 
 \newcommand\votcalogo{\includegraphics[width=17pt]{fig/logo_trans}}
 
+\newcommand\votcacommand[2]
+{
+\begin{bclogo}[couleur=bgblue, arrondi =0 , logo=\votcalogo, barre=line,noborder=true]{\small #1}
+\itshape {\small #2}
+\end{bclogo}
+}
+
+
 \definecolor{bgblue}{RGB}{245,243,253}
 \definecolor{ttblue}{RGB}{91,194,224}
 % \renewcommand\bcStyleTitre[1]{\large\textcolor{ttblue}{#1}}
@@ -73,6 +81,17 @@ pdfpagemode=UseNone]{hyperref}
 
 \usepackage{braket}
 \usepackage{amssymb}
+
+%%%%%%%% TESTING
+
+
+\usepackage{tikz}
+\usetikzlibrary{shapes,shadows,arrows}
+\usetikzlibrary{positioning}
+
+
+
+
 
 \makeindex
 
@@ -117,7 +136,7 @@ pdfpagemode=UseNone]{hyperref}
 \chapter{Theoretical background}
 \label{sec:theory}
 
-\input{theory/workflow}
+\input{theory/workflow}	
 \input{theory/morphology}
 \input{theory/fragments}
 \input{theory/neighborlist}
