introduction and theory section done (except for DMA, Thole)

--- a/manual.tex
+++ b/manual.tex
@@ -117,7 +117,7 @@ pdfpagemode=UseNone]{hyperref}
   mathescape=false
 }
 
-
+\setlength\parindent{0pt}
 \frontmatter
 \include{titlepage}
 \thispagestyle{empty}
