--- a/theory/energetic_disorder.tex
+++ b/theory/energetic_disorder.tex
@@ -1,6 +1,6 @@
 \section{Site energies}
 \label{sec:site_energies}
-A charge transfer reaction between molecules $i$ and $j$ is driven by the site energy\index{site energy} difference, $\Delta E_{ij} = E_i - E_j$. Since the  transfer rate, $\omega_{ij}$, depends exponentially on $\Delta E_{ij}$ (see~\equ{marcus}) it is important to compute its distribution as accurately as possible.  The total site energy difference has contributions due to \slink{ext_field}{externally applied electric field}, \slink{ecoulomb}{electrostatic interactions}, polarization effects, and \slink{internal_energy}{internal energy} differences. In what follows we discuss how to estimate these contributions by making use of first-principles calculations and polarizable force-fields.
+A charge transfer reaction between molecules $i$ and $j$ is driven by the site energy\index{site energy} difference, $\Delta E_{ij} = E_i - E_j$. Since the  transfer rate, $\omega_{ij}$, depends exponentially on $\Delta E_{ij}$ (see~\equ{marcus}) it is important to compute its distribution as accurately as possible.  The total site energy difference has contributions due to \slink{sec:ext_field}{externally applied electric field}, \slink{sec:ecoulomb}{electrostatic interactions}, polarization effects, and \slink{sec:internal_energy}{internal energy} differences. In what follows we discuss how to estimate these contributions by making use of first-principles calculations and polarizable force-fields.
 
 \subsection{Externally applied electric field}
 \label{sec:ext_field}
@@ -31,13 +31,12 @@ The contribution to $E_i^\text{el}$ from the first coordination shell is then un
 \end{equation}
 where the parameter $s$ is the inverse screening length. For a monovalent ion in water, for example, $\epsilon_{\text{s}}=80$ and $s=3\,\textrm{nm}^{-1}$~\cite{daggett_molecular_1991}. This screening function ensures that neighboring atoms interact via an unscreened Coulomb potential ($\epsilon \sim 1$) while the electrostatic interaction between atoms at large separations is screened as in the bulk. 
 
-Evaluation of the electrostatic contribution is provided by the \calc{ecoulomb} \calculator. Atomistic partial charges for charged an neutral molecule are taken from files specified in the \xmlsegments files. Note that, in order to speed up calculations for both methods, a cutoff radius (for the molecular centers of mass) can be given in  \xmloptions.
+Evaluation of the electrostatic contribution is provided by the \calc{emultipole} \calculator. Atomistic partial charges for charged an neutral molecule are taken from files specified in the \xmlcsg files. Note that, in order to speed up calculations for both methods, a cutoff radius (for the molecular centers of mass) can be given in  \xmloptions.
 
 The electrostatic site energies are saved to the \sqlstate file:
+\votcacommand{Electrostatic site energies}{\cmdemlt}
 
-{\noindent \small \ctprun \opt \xmloptions  \sql  \sqlstate \exe  \calc{ecoulomb} }
-
-\subsection{Internal energy difference}
+\subsection{Internal energy}
 \label{sec:internal_energy}
 
 The contribution to the site energy difference due to different internal energies\index{site energy!internal} (see \fig{parabolas}) can be written as
@@ -46,4 +45,7 @@ The contribution to the site energy difference due to different internal energie
 \Delta U_i - \Delta U_j = \left( U_{i}^{cC}-U_{i}^{nN}\right) - \left( U_{j}^{cC}-U_{j}^{nN}\right) \, ,
 \label{equ:conformational}
 \end{equation}
-where $U_{i}^{cC(nN)}$ is the total energy of molecule $i$ in the charged (neutral) state and geometry.  $\Delta U_{i}$ corresponds to the adiabatic ionization potential (or electron affinity) of molecule $i$, as shown in~\fig{parabolas}. For one-component systems and negligible conformational changes $ \Delta E_{ij}^\text{int}=0$, while it is significant for donor-acceptor systems.
+where $U_{i}^{cC(nN)}$ is the total energy of molecule $i$ in the charged (neutral) state and geometry.  $\Delta U_{i}$ corresponds to the adiabatic ionization potential (or electron affinity) of molecule $i$, as shown in~\fig{parabolas}. For one-component systems and negligible conformational changes $ \Delta E_{ij}^\text{int}=0$, while it is significant for donor-acceptor systems. 
+
+Internal energies determined using quantum-chemistry need to be specified in \xmlcsg. The values are written to the \sqlstate using the calculator \calc{einternal} (see also \slink{sec:eintramolecular}{intramolecular reorganization energy}):
+\votcacommand{Internal energies}{\cmdeint}
